# tikr

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/tikr/: main.go
config/: default.yaml
config/specs/: asic_metrics.yaml  market_ticks.yaml  network_flows.yaml
docker/: Dockerfile  Dockerfile.bench  Dockerfile.dev  docker-compose.yml
docs/: README-agents.md  README-detailed.md
examples/python/: 01_ingest_ticks.py  02_network_flows.py  03_asic_fault_detection.py  requirements.txt
pkg/agg/: agg_test.go  doc.go  functions.go  hooks.go  rollup.go
pkg/config/: config.go  config_test.go  doc.go
pkg/core/: bar.go  core_test.go  doc.go  key.go  schema.go  tick.go
pkg/ingest/: batcher.go  doc.go  ingest_test.go  otel_test.go  pipeline.go  pipeline_otel_test.go  server.go
pkg/output/: doc.go  kafka.go  kafka_test.go  otlp.go  otlp_test.go
pkg/pb/: tikr.pb.go  tikr_grpc.pb.go
pkg/query/: doc.go  server.go
pkg/storage/: bench_rocksdb_test.go  bench_test.go  blob.go  doc.go  engine.go  pebble.go  reader.go  rocksdb.go  storage_test.go  ttl.go  ttl_test.go  writer.go
pkg/telemetry/: doc.go  metrics.go  telemetry_test.go
proto/: tikr.proto
python-sdk/: README.md  pyproject.toml
python-sdk/tests/: test_models.py
python-sdk/tikr/: __init__.py  _stubs.py  client.py  models.py
tests/integration/: integration_test.go
